# chess-back/public/swagger.json
@@ -66,6 +66,43 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"LeaderboardEntryDTO": {
+				"properties": {
+					"username": {
+						"type": "string"
+					},
+					"score": {
+						"type": "number",
+						"format": "double"
+					},
+					"rank": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"username",
+					"score",
+					"rank"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"LeaderboardDTO": {
+				"properties": {
+					"list": {
+						"items": {
+							"$ref": "#/components/schemas/LeaderboardEntryDTO"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"list"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"AuthBody": {
 				"properties": {
 					"username": {
@@ -253,6 +290,33 @@
 						}
 					}
 				}
+			}
+		},
+		"/leaderboard": {
+			"get": {
+				"operationId": "GetLeaderboard",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/LeaderboardDTO"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Leaderboard"
+				],
+				"security": [],
+				"parameters": []
 			}
 		},
 		"/auth": {
