# chess-back/src/dto/leaderboard.dto.ts
@@ -1,0 +1,10 @@
+
+export interface LeaderboardDTO {
+    list: LeaderboardEntryDTO[];
+}
+
+export interface LeaderboardEntryDTO {
+    username: string;
+    score: number;
+    rank: number;
+}
